samples/_failures_safe/1761077333_0675c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25f9a86a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_25f9a86a.c:158:13: error: expected expression at end of input
  158 |             strncpy(tokens[token_count].value, buffer, MAX_TOKEN_LEN -
      |             ^~~~~~~
./samples/SAFE/__tmp_25f9a86a.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25f9a86a.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25f9a86a.c:158:13: error: expected declaration or statement at end of input
